# fletext

./: LICENSE  README.md  pyproject.toml
src/fletext/: __init__.py  dvalue.py  pubsub.py  ui.py
