[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "fletext"
version = "0.1.5"
authors = [
    {name="Stone Zhong", email="stone.zhong@gmail.com"}
]
description = "Utility to build flet based UI application"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENCSE"]

dependencies = [
    "flet>=0.83"
]

[project.urls]
Homepage = "https://github.com/stonezhong/fletext"
Issues = "https://github.com/stonezhong/fletext/issues"
